# binance-futures-sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  definitions.hpp.in
examples/: CMakeLists.txt  config.hpp
examples/connect-multiple/: CMakeLists.txt  main.cc
examples/depth/: CMakeLists.txt  main.cc
examples/download/: CMakeLists.txt  main.cc
examples/http/: CMakeLists.txt  main.cc
examples/level3/: CMakeLists.txt  main.cc
examples/listen-multiple/: CMakeLists.txt  main.cc
examples/websocket/: CMakeLists.txt  main.cc
include/: binance.hpp
include/binance/: auth.hpp  common.hpp  conv.hpp  definitions.hpp  error.hpp  json.hpp
include/binance/crypto/: signer.hpp
include/binance/http/: messages.hpp  query_args.hpp  stream.hpp
include/binance/websocket/: messages.hpp  stream.hpp  subscribe_to.hpp  unsubscribe_from.hpp
